Added ID to form

--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
 
     <article class="contact-form">
       <h2 class="contact-form__heading">Formularz kontaktowy</h2>
-      <form class="form">
+      <form class="form" id="contact">
         <div>
           <label for="form-name" class="form__label">Imię i nazwisko</label>
           <input type="text" name="name" minlength="3" id="form-name" class="form__input" placeholder="Jan Kowalski" required>
